# eir

./: Cargo.toml  Dockerfile  LICENSE  Makefile  PROJECT  README.md  config.json  config.yaml  go.mod  howto.md  response.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: cd.yaml  ci.yaml  ci.yml  publish_docker.yaml
api/v1alpha1/: grafanaalerthandler_types.go  groupversion_info.go  zz_generated.deepcopy.go
cmd/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: grafanaalerthandler_editor_role.yaml  grafanaalerthandler_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: eir_v1alpha1_grafanaalerthandler.yaml  kustomization.yaml
example/clients/: main.json
example/contexts/: github_develop.json  github_main.json
example/endpoint_groups/: github.json
helm/: Chart.yaml  README.md  values.schema.json  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service-monitor.yaml  service.yaml
internal/controller/: grafanaalerthandler_controller.go  grafanaalerthandler_controller_test.go  suite_test.go
src/: jmes_extensions.rs  main.rs  metrics.rs
src/client/: client.rs  http.rs  mod.rs
src/config/: client.rs  config.rs  endpoint.rs  exporter.rs  metric.rs  mod.rs
test/e2e/: e2e_test.go  (+1 more)
