[package]
name = "eir"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonpath-rust = "0.7.1"
metrics-exporter-prometheus = "0.15.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
metrics = "0.23.0"
metrics-util = "0.17.0"
quanta = "0.12.3"
rand = "0.8.5"
serde_yaml = "0.9.34"
serde_yml = "0.0.12"
