[package]
name = "eir"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonpath-rust = "1.0.3"
metrics-exporter-prometheus = "0.17.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
metrics = "0.24.2"
metrics-util = "0.20.0"
quanta = "0.12.6"
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["json"]}
tokio = { version = "1.46.1", features = ["full"]}
chrono = "0.4.41"
jmespath = "0.4.0"
clap = { version = "4.5.41", features = ["derive", "env"] }

[dev-dependencies]
mockito = "1.7.0"
