[package]
name = "eir"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonpath-rust = "1.0.3"
metrics-exporter-prometheus = "0.18.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.148"
metrics = "0.24.3"
metrics-util = "0.20.1"
quanta = "0.12.6"
rand = "0.9.1"
reqwest = { version = "0.13.1", features = ["json"]}
tokio = { version = "1.46.1", features = ["full"]}
chrono = "0.4.41"
jmespath = "0.4.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
log = "0.4.29"
env_logger = "0.11.8"

[dev-dependencies]
mockito = "1.7.1"
